@@ -1,0 +1,16 @@
+<html>
+    <body>
+        <div class="images">
+            <img alt="Funny image" src="http://fooimages.org/image1.png">
+        </div>
+        <div class="links">
+            <ul>
+                <li>
+                    <a href="http://foofiles.org/text1.txt">A text file</a>
+                    <a href="http://foofiles.org/text2.txt">Another text file</a>
+                </li>
+            </ul>
+        </div>
+        <div>http://fooimages.org/image1.png</div>
+    </body>
+</html>
