@@ -1,0 +1,1 @@
+Allanon was the last of the Druids of Paranor
