@@ -1,0 +1,1 @@
+Allanon was killed in the battle with a Jachyra
